--- a/src/app/main/pages/settings/banking/new/payment-method-new.component.html
+++ b/src/app/main/pages/settings/banking/new/payment-method-new.component.html
@@ -1,18 +1,52 @@
-<app-page title="New payment method">
+<!-- this.displayMode = {{this.displayMode}} -->
 
-  <section fxFlex="100%" fxLayout="row wrap">
-    <form class="checkout" novalidate (ngSubmit)="createToken()" [formGroup]="stripeTest">
-      <input type="text" formControlName="name" placeholder="Jane Doe">
-      <ngx-stripe-card [options]="cardOptions" [elementsOptions]="elementsOptions"></ngx-stripe-card>
-      <button type="submit">
-        Create
-      </button>
+<ng-container [ngSwitch]="true">
+  <ng-template [ngSwitchCase]="this.displayMode == 'Page'">
+    <app-page title="New payment method">
+      <ng-container [ngTemplateOutlet]="htmlContent"></ng-container>
+    </app-page>
+  </ng-template>
 
-      <app-bank-account></app-bank-account>
+  <ng-template [ngSwitchCase]="this.displayMode == 'Component'">
+    <ng-container [ngTemplateOutlet]="htmlContent"></ng-container>
+  </ng-template>
 
-    </form>
+  <!-- this.isDialog = {{this.isDialog}} -->
+  <ng-template [ngSwitchCase]="this.displayMode == 'Dialog' && this.isDialog">
+    <h2 mat-dialog-title>New payment method</h2>
+
+    <mat-dialog-content>
+      <ng-container [ngTemplateOutlet]="htmlContent"></ng-container>
+    </mat-dialog-content>
+
+    <mat-dialog-actions align="end">
+      <button mat-button mat-dialog-close>Cancel</button>
+      <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Ok</button>
+    </mat-dialog-actions>
+  </ng-template>
+</ng-container>
+
+
+
+<ng-template #htmlContent>
+  <section>
+
+    <mat-tab-group class="custom-tab-group fill" fxFlexFill fxFlex fxLayout="column" fxLayoutAlign="stretch stretch">
+      <mat-tab label="Credit card">
+        <section class="relative">
+          <form class="checkout" novalidate (ngSubmit)="createToken()" [formGroup]="stripeTest">
+            <input type="text" formControlName="name" placeholder="Jane Doe">
+            <ngx-stripe-card [options]="cardOptions" [elementsOptions]="elementsOptions"></ngx-stripe-card>
+          </form>
+        </section>
+      </mat-tab>
+      <mat-tab label="Bank account">
+        <section class="relative">
+          <app-bank-account></app-bank-account>
+        </section>
+      </mat-tab>
+    </mat-tab-group>
+
 
   </section>
-
-
-</app-page>
+</ng-template>
