--- a/src/app/main/pages/settings/banking/new/payment-method-new.component.html
+++ b/src/app/main/pages/settings/banking/new/payment-method-new.component.html
@@ -1,5 +1,5 @@
 <!-- this.displayMode = {{this.displayMode}} -->
-
+<em class="h-max h-full"></em>
 <ng-container [ngSwitch]="true">
   <ng-template [ngSwitchCase]="this.displayMode == 'Page'">
     <app-page title="New payment method">
@@ -11,7 +11,6 @@
     <ng-container [ngTemplateOutlet]="htmlContent"></ng-container>
   </ng-template>
 
-  <!-- this.isDialog = {{this.isDialog}} -->
   <ng-template [ngSwitchCase]="this.displayMode == 'Dialog' && this.isDialog">
     <h2 mat-dialog-title>New payment method</h2>
 
@@ -29,11 +28,11 @@
 
 
 <ng-template #htmlContent>
-  <section>
+  <section fxFlex fxFlexFill>
 
     <mat-tab-group class="custom-tab-group fill" fxFlexFill fxFlex fxLayout="column" fxLayoutAlign="stretch stretch">
       <mat-tab label="Credit card">
-        <section class="relative">
+        <section fxFlex fxFlexFill>
           <form class="checkout" novalidate (ngSubmit)="createToken()" [formGroup]="stripeTest">
             <input type="text" formControlName="name" placeholder="Jane Doe">
             <ngx-stripe-card [options]="cardOptions" [elementsOptions]="elementsOptions"></ngx-stripe-card>
@@ -41,7 +40,7 @@
         </section>
       </mat-tab>
       <mat-tab label="Bank account">
-        <section class="relative">
+        <section fxFlex fxFlexFill fxLayoutAlign="center center">
           <app-bank-account></app-bank-account>
         </section>
       </mat-tab>
