Implementation of payment integration

--- a/src/app/main/dynamic-modules/axie-infinity/axie-infinity-main/axie-infinity-main.component.html
+++ b/src/app/main/dynamic-modules/axie-infinity/axie-infinity-main/axie-infinity-main.component.html
@@ -13,4 +13,18 @@
 
 
   <img src="/assets/img/08 - Class Advantage.png">
+
+
+  <ul>
+    <li>From 0 to 799 ELO accounts get 0 SLP</li>
+    <li>From 800 to 999 ELO accounts get 1 SLP</li>
+    <li>From 1000 to 1099 ELO accounts get 3 SLP</li>
+    <li>From 1100 to 1299 ELO accounts get 6 SLP</li>
+    <li>From 1300 to 1499 ELO accounts get 9 SLP</li>
+    <li>From 1500 to 1799 ELO accounts get 12 SLP</li>
+    <li>From 1800 to 1999 ELO accounts get 15 SLP</li>
+    <li>From 2000 to 2199 ELO accounts get 18 SLP</li>
+    <li>From 2200 to 6999 ELO accounts get 21 SLP</li>
+  </ul>
+
 </app-page>
