--- a/src/app/shared/payment/bank-account/bank-account.component.html
+++ b/src/app/shared/payment/bank-account/bank-account.component.html
@@ -4,11 +4,15 @@
     (Load)="onPlaidLoad($event)" (Event)="onPlaidEvent($event)" (Click)="onPlaidClick($event)">Link Your Bank
     Account</button>
 
-    <section *ngIf="this.accountData">
-      {{this.accountData | json}}
-    </section>
+  <section *ngIf="this.accountData" fxLayout="column" fxFlexAlign="stretch">
+    <mat-checkbox class="example-margin" *ngFor="let account of this.accountData.metadata.accounts"
+    color="primary">
+      {{account.name}}
+    </mat-checkbox>
+    <!-- {{this.accountData | json}} -->
+  </section>
 
-  <dl *ngIf="!this.environment.production" fxFlex fxLayout="row wrap">
+  <dl *ngIf="!this.environment.production && !this.accountData" fxFlex fxLayout="row wrap">
     <dt fxFlex="30%" fxLayout="row" class="mx-0">User:</dt>
     <dd fxFlex="calc(70%-40px)" fxLayout="row">user_good</dd>
 
