product and subscriptions

--- a/src/app/main/pages/admin/dashboard/dashboard.component.html
+++ b/src/app/main/pages/admin/dashboard/dashboard.component.html
@@ -1,6 +1,10 @@
 <app-page title="Dashboard">
   <section fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="flex-start baseline">
 
+    <mat-card>
+      <mat-card-title>Subscriptions</mat-card-title>
+      <mat-card-footer></mat-card-footer>
+    </mat-card>
 
   </section>
 </app-page>
