--- a/src/app/main/pages/settings/banking/new/payment-method-new.component.html
+++ b/src/app/main/pages/settings/banking/new/payment-method-new.component.html
@@ -19,8 +19,8 @@
     </mat-dialog-content>
 
     <mat-dialog-actions align="end">
-      <button mat-button mat-dialog-close>Cancel</button>
-      <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Ok</button>
+      <button mat-button mat-dialog-close cdkFocusInitial>Cancel</button>
+      <button mat-button [mat-dialog-close]="true" (click)="this.save()">Ok</button>
     </mat-dialog-actions>
   </ng-template>
 </ng-container>
