--- a/src/app/main/pages/settings/banking/new/payment-method-new.component.html
+++ b/src/app/main/pages/settings/banking/new/payment-method-new.component.html
@@ -20,7 +20,7 @@
 
     <mat-dialog-actions align="end">
       <button mat-button mat-dialog-close cdkFocusInitial>Cancel</button>
-      <button mat-button [mat-dialog-close]="true" (click)="this.save()" [disabled]="this.bankAccountComponent?.selectedAccount">Ok</button>
+      <button mat-button [mat-dialog-close]="true" (click)="this.save()" [disabled]="!this.bankAccountComponent?.selectedAccount">Ok</button>
     </mat-dialog-actions>
   </ng-template>
 </ng-container>
