--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
 // // @import "@angular/material/prebuilt-themes/deeppurple-amber.css";
 
 
-@import "~@fortawesome/fontawesome-free/css/all.css";
+// @import "~@fortawesome/fontawesome-free/css/all.css";
 
 @import '~@angular/cdk/overlay-prebuilt.css';
 
