--- a/src/app/main/pages/settings/banking/new/payment-method-new.component.html
+++ b/src/app/main/pages/settings/banking/new/payment-method-new.component.html
@@ -1,5 +1,5 @@
 <!-- this.displayMode = {{this.displayMode}} -->
-<em class="h-max h-full"></em>
+<!-- <em class="h-max h-full"></em> -->
 <ng-container [ngSwitch]="true">
   <ng-template [ngSwitchCase]="this.displayMode == 'Page'">
     <app-page title="New payment method">
