--- a/src/app/main/pages/settings/banking/new/payment-method-new.component.html
+++ b/src/app/main/pages/settings/banking/new/payment-method-new.component.html
@@ -40,8 +40,8 @@
         </section>
       </mat-tab>
       <mat-tab label="Bank account">
-        <section fxFlex fxFlexFill fxLayoutAlign="center center">
-          <app-bank-account></app-bank-account>
+        <section fxFlex fxFlexFill fxLayoutAlign="stretch stretch">
+          <app-bank-account class="flex"></app-bank-account>
         </section>
       </mat-tab>
     </mat-tab-group>
