--- a/src/app/main/pages/settings/banking/new/payment-method-new.component.html
+++ b/src/app/main/pages/settings/banking/new/payment-method-new.component.html
@@ -41,7 +41,7 @@
       </mat-tab>
       <mat-tab label="Bank account">
         <section fxFlex fxFlexFill fxLayoutAlign="stretch stretch">
-          <app-bank-account class="flex"></app-bank-account>
+          <app-bank-account class="flex w-full"></app-bank-account>
         </section>
       </mat-tab>
     </mat-tab-group>
