--- a/src/app/main/pages/settings/banking/banking.component.html
+++ b/src/app/main/pages/settings/banking/banking.component.html
@@ -4,7 +4,7 @@
   <section fxFlex="auto" fxLayout="column" fxLayoutGap="20px" class="max-h-full" fxLayoutAlign="flex-start baseline">
     <mat-tab-group class="custom-tab-group fill" fxFlexFill fxFlex fxLayout="column" fxLayoutAlign="stretch stretch">
       <mat-tab label="Payment Methods">
-        <section class="relative">
+        <section class="">
           <app-page title="" icon="account_balance">
 
             <ng-template #optionsContent>
@@ -12,10 +12,10 @@
                 <mat-icon>account_balance</mat-icon>
               </button>
             </ng-template>
-            <!-- <app-payment-method-list></app-payment-method-list> -->
 
 
-            <!-- <app-bank-account></app-bank-account> -->
+            <app-payment-method-list></app-payment-method-list>
+
 
           </app-page>
         </section>
