--- a/src/app/main/pages/settings/banking/new/payment-method-new.component.html
+++ b/src/app/main/pages/settings/banking/new/payment-method-new.component.html
@@ -18,9 +18,17 @@
       <ng-container [ngTemplateOutlet]="htmlContent"></ng-container>
     </mat-dialog-content>
 
-    <mat-dialog-actions align="end">
-      <button mat-button mat-dialog-close cdkFocusInitial>Cancel</button>
-      <button mat-button [mat-dialog-close]="true" (click)="this.save()" [disabled]="!this.cardComponent?.ready && !this.bankAccountComponent?.selectedAccount">Ok</button>
+    <mat-dialog-actions fxLayoutAlign="stretch stretch">
+      <section fxFlex fxLayoutAlign="space-between stretch">
+        <section class="flex">
+          <button mat-button (click)="this.refresh()">Refresh</button>
+        </section>
+        <section class="flex">
+          <button mat-button mat-dialog-close cdkFocusInitial>Cancel</button>
+          <button mat-button (click)="this.save()"
+            [disabled]="!this.cardComponent?.ready && !this.bankAccountComponent?.selectedAccount">Ok</button>
+        </section>
+      </section>
     </mat-dialog-actions>
   </ng-template>
 </ng-container>
@@ -30,7 +38,8 @@
 <ng-template #htmlContent>
   <section fxFlex fxFlexFill>
 
-    <mat-tab-group (selectedTabChange)="this.tabSelected($event)" class="custom-tab-group fill" fxFlexFill fxFlex fxLayout="column" fxLayoutAlign="stretch stretch">
+    <mat-tab-group (selectedTabChange)="this.tabSelected($event)" class="custom-tab-group fill" fxFlexFill fxFlex
+      fxLayout="column" fxLayoutAlign="stretch stretch">
       <mat-tab label="Credit card">
         <section fxFlex fxFlexFill>
           <form class="checkout" novalidate (ngSubmit)="createToken()" [formGroup]="stripeTest">
