fixing configuration mechanism

--- a/src/app/main/pages/auth/login/login.component.html
+++ b/src/app/main/pages/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="app-wrapper bg-gradient-to-b from-red-600 via-orange-400 to-yellow-300" fxLayoutAlign="center center">
 
 
-  <mat-card fxFlex.le-sm="50%" fxFlex="30%" fxLayoutGap="30px" fxLayout="column">
+  <mat-card class="flex w-4/5 sm:w-3/5 md:w-3/5 gt-md:w-2/5" fxLayoutGap="30px" fxLayout="column">
 
     <span *ngIf="this.validationErrors" fxLayoutAlign="center center">
       <mat-error *ngIf="userName.dirty && userName.hasError('required')">
@@ -16,8 +16,8 @@
     </span>
 
     <span fxLayoutAlign="center center" class="app-title">
-      <span class="text">
-        My HCare
+      <span class="text whitespace-nowrap">
+        {{AppInitializerService.configuration.environment.appTitle}}
       </span>
     </span>
 
