--- a/src/app/main/pages/settings/dashboard/dashboard.component.html
+++ b/src/app/main/pages/settings/dashboard/dashboard.component.html
@@ -9,5 +9,13 @@
       </mat-card-header>
     </mat-card>
 
+    <mat-card routerLink="../subscription" class="cursor-pointer">
+      <mat-card-header>
+        <mat-icon mat-card-avatar class="header-icon">card_membership</mat-icon>
+        <mat-card-title>Subscription</mat-card-title>
+        <mat-card-subtitle>Your subscription</mat-card-subtitle>
+      </mat-card-header>
+    </mat-card>
+
   </section>
 </app-page>
