--- a/src/app/main/pages/admin/subscriptions/new/subscription-new.component.html
+++ b/src/app/main/pages/admin/subscriptions/new/subscription-new.component.html
@@ -2,7 +2,7 @@
 <!-- <em class="h-max h-full"></em> -->
 <ng-container [ngSwitch]="true">
   <ng-template [ngSwitchCase]="this.displayMode == 'Page'">
-    <app-page title="New payment method">
+    <app-page title="New subscription">
       <ng-container [ngTemplateOutlet]="htmlContent"></ng-container>
     </app-page>
   </ng-template>
@@ -12,7 +12,7 @@
   </ng-template>
 
   <ng-template [ngSwitchCase]="this.displayMode == 'Dialog' && this.isDialog">
-    <h2 mat-dialog-title>New payment method</h2>
+    <h2 mat-dialog-title>New subscription</h2>
 
     <mat-dialog-content>
       <ng-container [ngTemplateOutlet]="htmlContent"></ng-container>
@@ -21,12 +21,9 @@
     <mat-dialog-actions fxLayoutAlign="stretch stretch">
       <section fxFlex fxLayoutAlign="space-between stretch">
         <section class="flex">
-          <button mat-button (click)="this.refresh()">Refresh</button>
-        </section>
-        <section class="flex">
           <button mat-button mat-dialog-close cdkFocusInitial>Cancel</button>
           <button mat-button (click)="this.save()"
-            [disabled]="!this.cardComponent?.ready && !this.bankAccountComponent?.selectedAccount">Ok</button>
+            [disabled]="!this.form.valid">Ok</button>
         </section>
       </section>
     </mat-dialog-actions>
@@ -37,23 +34,6 @@
 
 <ng-template #htmlContent>
   <section fxFlex fxFlexFill>
-
-    <mat-tab-group (selectedTabChange)="this.tabSelected($event)" class="custom-tab-group fill" fxFlexFill fxFlex
-      fxLayout="column" fxLayoutAlign="stretch stretch">
-      <mat-tab label="Credit card">
-        <section fxFlex fxFlexFill>
-          <form class="checkout" novalidate (ngSubmit)="this.onSubmit($event)" [formGroup]="stripeTest">
-            <input type="text" formControlName="name" placeholder="Jane Doe">
-            <ngx-stripe-card [options]="cardOptions" [elementsOptions]="elementsOptions"></ngx-stripe-card>
-          </form>
-        </section>
-      </mat-tab>
-      <mat-tab label="Bank account">
-        <section fxFlex fxFlexFill fxLayoutAlign="stretch stretch">
-          <app-bank-account class="flex w-full"></app-bank-account>
-        </section>
-      </mat-tab>
-    </mat-tab-group>
 
 
   </section>
