--- a/src/app/main/pages/admin/subscriptions/new/subscription-new.component.html
+++ b/src/app/main/pages/admin/subscriptions/new/subscription-new.component.html
@@ -33,8 +33,34 @@
 
 
 <ng-template #htmlContent>
-  <section fxFlex fxFlexFill>
+  <section [formGroup]="this.form" fxFlex fxFlexFill>
+    <section class="mb-8">
+      <mat-form-field appearance="fill" class="w-full">
+        <mat-label>Name</mat-label>
+        <input matInput placeholder="Placeholder" formControlName="name">
+        <mat-icon matSuffix>check</mat-icon>
+        <mat-hint>Subscription name will appear as part of the subscription title</mat-hint>
+      </mat-form-field>
+    </section>
 
+    <section class="mb-8">
+      <mat-form-field appearance="fill" class="w-full">
+        <mat-label>Price</mat-label>
+        <input matInput placeholder="Placeholder" formControlName="price">
+        <mat-icon matSuffix>attach_money</mat-icon>
+        <mat-slider min="1" max="15" step="0.10" formControlName="price"></mat-slider>
+        <mat-hint>Hint</mat-hint>
+      </mat-form-field>
+    </section>
+
+    <section class="mb-8">
+      <mat-form-field appearance="fill" class="w-full">
+        <mat-label>Fill form field</mat-label>
+        <input matInput placeholder="Placeholder">
+        <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+        <mat-hint>Hint</mat-hint>
+      </mat-form-field>
+    </section>
 
   </section>
 </ng-template>
