--- a/src/app/shared/layout/layout-main/layout-main.component.html
+++ b/src/app/shared/layout/layout-main/layout-main.component.html
@@ -5,7 +5,7 @@
 </app-toolbar>
 
 <mat-drawer-container class="sidenav-container" autosize>
-  <mat-drawer #drawer class="example-sidenav" mode="side">
+  <mat-drawer #drawer class="example-sidenav" [mode]="this.side">
     <app-menu fxFlexFill></app-menu>
   </mat-drawer>
 
