--- a/src/app/main/pages/admin/subscriptions/subscriptions.component.html
+++ b/src/app/main/pages/admin/subscriptions/subscriptions.component.html
@@ -13,16 +13,45 @@
       <app-selector-list [config]="this.gridFilterConfig"></app-selector-list>
     </section>
 
-    <table mat-table #table class="mat-elevation-z8" style="width: 100%">
+    <table mat-table #table [dataSource]="gridConfig?.data" class="mat-elevation-z8" style="width: 100%">
 
       <!--- Note that these columns can be defined in any order.
             The actual rendered columns are set as a property on the row definition" -->
 
       <!-- Position Column -->
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef> Description </th>
-        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
       </ng-container>
+
+      <ng-container matColumnDef="activateDate">
+        <th mat-header-cell *matHeaderCellDef> Date </th>
+        <td mat-cell *matCellDef="let element">
+          {{element.activateDate?.toDate() | date: 'MMM dd, YYYY hh:mm:ss'}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef> Price </th>
+        <td mat-cell *matCellDef="let element" class="">
+          {{element.price | currency}} </td>
+      </ng-container>
+
+
+      <ng-container matColumnDef="options">
+        <th mat-header-cell *matHeaderCellDef class="w-3"> </th>
+        <td mat-cell *matCellDef="let element" class="w-3">
+          <button mat-icon-button [matMenuTriggerFor]="menu">
+            <mat-icon>more_horiz</mat-icon>
+          </button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item>
+              <mat-icon>edit</mat-icon>
+              Edit
+            </button>
+          </mat-menu>
+        </td>
+      </ng-container>
+
 
       <!-- <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Name </th>
