--- a/src/app/main/pages/admin/subscriptions/subscriptions.component.html
+++ b/src/app/main/pages/admin/subscriptions/subscriptions.component.html
@@ -30,8 +30,8 @@
           {{element.activateDate?.toDate() | date: 'MMM dd, YYYY hh:mm:ss'}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="price" mat-sort-header sortActionDescription="Sort by price">
-        <th mat-header-cell *matHeaderCellDef> Price </th>
+      <ng-container matColumnDef="price" sortActionDescription="Sort by price">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
         <td mat-cell *matCellDef="let element" class="">
           {{element.price | currency}} </td>
       </ng-container>
@@ -73,7 +73,12 @@
         (click)="this.edit(row)"></tr>
     </table>
 
-    <mat-paginator [length]="gridConfig?.resultsLength" [pageSize]="10"></mat-paginator>
+    <mat-paginator
+    [length]="gridConfig?.resultsLength"
+    [pageSize]="10"
+    [hidePageSize]="true"
+    [showFirstLastButtons]="false"
+    ></mat-paginator>
 
   </section>
 
